--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,15 @@
             <exclusions>
             </exclusions>
     </dependency>
+    
+    <dependency>
+        <groupId>io.dropwizard.metrics</groupId>
+        <artifactId>metrics-core</artifactId>
+        <version>3.1.0</version>
+        <scope>test</scope>
+    </dependency>
+    
+    
   </dependencies>
   <build>
       <plugins>
