--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
         <version>3.1.0</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+	   <groupId>org.apache.accumulo</groupId>
+	   <artifactId>accumulo-minicluster</artifactId>
+	   <version>1.7.1</version>
+       <scope>test</scope>
+    </dependency>
+    
     
     
   </dependencies>
